// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBlockEndWidth renders 0 1`] = `
Array [
  .c0 {
  border-block-end-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders function 1`] = `
Array [
  .c0 {
  border-block-end-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-block-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders negative number 1`] = `
Array [
  .c0 {
  border-block-end-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-block-end-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-block-end-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-block-end-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-end-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-end-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-block-end-width: July;
}

@media May {
  .c0 {
    border-block-end-width: August;
  }
}

@media April {
  .c0 {
    border-block-end-width: September;
  }
}

@media January {
  .c0 {
    border-block-end-width: November;
  }
}

@media April {
  .c0 {
    border-block-end-width: August;
  }
}

@media June {
  .c0 {
    border-block-end-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: July;
}

@media May {
  .c0 {
    border-block-end-width: August;
  }
}

@media April {
  .c0 {
    border-block-end-width: September;
  }
}

@media January {
  .c0 {
    border-block-end-width: November;
  }
}

@media April {
  .c0 {
    border-block-end-width: August;
  }
}

@media June {
  .c0 {
    border-block-end-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-end-width: November;
  }
}

@media April {
  .c0 {
    border-block-end-width: January;
  }
}

@media January {
  .c0 {
    border-block-end-width: December;
  }
}

@media April {
  .c0 {
    border-block-end-width: April;
  }
}

@media June {
  .c0 {
    border-block-end-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-end-width: November;
  }
}

@media April {
  .c0 {
    border-block-end-width: January;
  }
}

@media January {
  .c0 {
    border-block-end-width: December;
  }
}

@media April {
  .c0 {
    border-block-end-width: April;
  }
}

@media June {
  .c0 {
    border-block-end-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-block-end-width: July;
  }
}

@media April {
  .c0 {
    border-block-end-width: August;
  }
}

@media January {
  .c0 {
    border-block-end-width: September;
  }
}

@media April {
  .c0 {
    border-block-end-width: November;
  }
}

@media June {
  .c0 {
    border-block-end-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-block-end-width: July;
  }
}

@media April {
  .c0 {
    border-block-end-width: August;
  }
}

@media January {
  .c0 {
    border-block-end-width: September;
  }
}

@media April {
  .c0 {
    border-block-end-width: November;
  }
}

@media June {
  .c0 {
    border-block-end-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-end-width: January;
  }
}

@media April {
  .c0 {
    border-block-end-width: December;
  }
}

@media January {
  .c0 {
    border-block-end-width: April;
  }
}

@media April {
  .c0 {
    border-block-end-width: May;
  }
}

@media June {
  .c0 {
    border-block-end-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-end-width: January;
  }
}

@media April {
  .c0 {
    border-block-end-width: December;
  }
}

@media January {
  .c0 {
    border-block-end-width: April;
  }
}

@media April {
  .c0 {
    border-block-end-width: May;
  }
}

@media June {
  .c0 {
    border-block-end-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-block-end-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders string 1`] = `
Array [
  .c0 {
  border-block-end-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockEndWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderBlockEndWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-block-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
